--- a/css/style.css
+++ b/css/style.css
@@ -102,4 +102,43 @@ a {
 }
 .intro__btn {
   margin-top: 30px;
+}
+
+.collection {
+  background-image: url(../img/collect.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center top;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.collection__card {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 200px;
+}
+.collection__title {
+  font-family: "Fraunces 9pt";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  /* identical to box height, or 133% */
+  text-align: center;
+  color: #333d4b;
+}
+.collection__text {
+  width: 255px;
+  /* Light and flavorful */
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  /* or 162% */
+  text-align: center;
+  color: #333d4b;
 }/*# sourceMappingURL=style.css.map */
