--- a/css/style.css
+++ b/css/style.css
@@ -141,4 +141,82 @@ a {
   /* or 162% */
   text-align: center;
   color: #333d4b;
+}
+
+.choose {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 100px;
+  padding: 100px 0;
+  width: 100%;
+  height: 577px;
+  background: #2c343e;
+  border-radius: 10px;
+}
+.choose__title {
+  font-family: "Fraunces 9pt";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 48px;
+  /* identical to box height, or 120% */
+  text-align: center;
+  color: #fefcf7;
+}
+.choose__text {
+  width: 550px;
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  /* or 162% */
+  text-align: center;
+  color: #fefcf7;
+  mix-blend-mode: normal;
+  opacity: 0.8;
+  margin: 50px 0;
+}
+.choose__cards {
+  position: absolute;
+  top: 400px;
+  display: flex;
+  align-items: center;
+  gap: 50px;
+}
+.choose__card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  /* Group 10 Copy 2 */
+  width: 350px;
+  height: 382px;
+  background-color: #0e8784;
+  border-radius: 10px;
+}
+.choose__subtitle {
+  /* Best quality */
+  font-family: "Fraunces 9pt";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  /* identical to box height, or 133% */
+  text-align: center;
+  color: #fefcf7;
+}
+.choose__subtext {
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  /* or 162% */
+  text-align: center;
+  color: #fefcf7;
 }/*# sourceMappingURL=style.css.map */
