--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,31 @@
   text-transform: uppercase;
   color: #333d4b;
 }
+.navbar__burger {
+  display: none;
+  align-items: center;
+  flex-direction: column;
+  gap: 5px;
+}
+.navbar__hr {
+  width: 30px;
+  height: 3px;
+  background-color: black;
+  border-radius: 15px;
+  border: none;
+}
 
+@media only screen and (max-width: 450px) {
+  .navbar__list {
+    display: none;
+  }
+  .navbar__burger {
+    display: flex;
+  }
+  .navbar__logo {
+    width: 163px;
+  }
+}
 * {
   padding: 0;
   margin: 0;
@@ -104,6 +128,36 @@ a {
   margin-top: 30px;
 }
 
+@media only screen and (max-width: 450px) {
+  .intro {
+    padding: 60px 50px;
+    background-position: center;
+    border-radius: 20px;
+  }
+  .intro__left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .intro__title {
+    width: 280px;
+    /* Great coffee made si */
+    font-size: 40px;
+    line-height: 40px;
+    text-align: center;
+    color: #fefcf7;
+  }
+  .intro__text {
+    /* Start your mornings */
+    width: 280px;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 25px;
+    /* or 167% */
+    text-align: center;
+  }
+}
 .collection {
   background-image: url(../img/collect.png);
   background-repeat: no-repeat;
@@ -143,6 +197,16 @@ a {
   color: #333d4b;
 }
 
+@media only screen and (max-width: 450px) {
+  .collection {
+    margin-top: 100px;
+    flex-direction: column;
+    gap: 0;
+  }
+  .collection__card {
+    margin-top: 100px;
+  }
+}
 .choose {
   position: relative;
   display: flex;
@@ -219,4 +283,33 @@ a {
   /* or 162% */
   text-align: center;
   color: #fefcf7;
+}
+
+@media only screen and (max-width: 450px) {
+  .choose {
+    height: 900px;
+    padding: 20px 0;
+    justify-content: start;
+  }
+  .choose__cards {
+    flex-direction: column;
+    top: 300px;
+  }
+  .choose__card {
+    width: 300px;
+  }
+  .choose__title {
+    /* Why choose us? */
+    font-family: "Fraunces 9pt";
+    font-style: normal;
+    font-weight: 900;
+    font-size: 28px;
+    line-height: 28px;
+    /* identical to box height, or 100% */
+    text-align: center;
+    color: #fefcf7;
+  }
+  .choose__text {
+    width: 90%;
+  }
 }/*# sourceMappingURL=style.css.map */
