--- a/homeBlock/_navbar.scss
+++ b/homeBlock/_navbar.scss
@@ -28,4 +28,32 @@
       color: #333d4b;
     }
   }
+
+  &__burger {
+    display: none;
+    align-items: center;
+    flex-direction: column;
+    gap: 5px;
+  }
+  &__hr {
+    width: 30px;
+    height: 3px;
+    background-color: black;
+    border-radius: 15px;
+    border: none;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .navbar {
+    &__list {
+      display: none;
+    }
+    &__burger {
+      display: flex;
+    }
+    &__logo {
+      width: 163px;
+    }
+  }
 }
