about full page

--- a/homeBlock/_collections.scss
+++ b/homeBlock/_collections.scss
@@ -40,12 +40,24 @@
   }
 }
 
-@media only screen and (max-width: 450px) {
+// @media only screen and (max-width: 450px) {
+//   .collection {
+//     margin-top: 100px;
+//     flex-direction: column;
+//     gap: 0;
+//     &__card {
+//       margin-top: 100px;
+//     }
+//   }
+// }
+
+@media only screen and (max-width: 768px) {
   .collection {
-    margin-top: 100px;
     flex-direction: column;
     gap: 0;
+
     &__card {
+      flex-direction: row;
       margin-top: 100px;
     }
   }
