--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .works__btn, .intro__btn {
   width: 217px;
   height: 56px;
@@ -66,7 +67,7 @@
   border: none;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 768px) {
   .navbar__list {
     display: none;
   }
@@ -135,34 +136,20 @@ a {
   margin-top: 30px;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 768px) {
   .intro {
-    padding: 60px 50px;
     background-position: center;
     border-radius: 20px;
   }
-  .intro__left {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
   .intro__title {
-    width: 280px;
     /* Great coffee made si */
-    font-size: 40px;
-    line-height: 40px;
-    text-align: center;
-    color: #fefcf7;
+    width: 330px;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 48px;
   }
   .intro__text {
-    /* Start your mornings */
-    width: 280px;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 25px;
-    /* or 167% */
-    text-align: center;
+    width: 400px;
   }
 }
 .collection {
@@ -204,13 +191,13 @@ a {
   color: #333d4b;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 768px) {
   .collection {
-    margin-top: 100px;
     flex-direction: column;
     gap: 0;
   }
   .collection__card {
+    flex-direction: row;
     margin-top: 100px;
   }
 }
@@ -292,32 +279,27 @@ a {
   color: #fefcf7;
 }
 
-@media only screen and (max-width: 450px) {
-  .choose {
-    height: 900px;
-    padding: 20px 0;
-    justify-content: start;
-  }
+@media only screen and (max-width: 768px) {
   .choose__cards {
     flex-direction: column;
-    top: 300px;
   }
   .choose__card {
-    width: 300px;
-  }
-  .choose__title {
-    /* Why choose us? */
-    font-family: "Fraunces 9pt";
-    font-style: normal;
-    font-weight: 900;
-    font-size: 28px;
-    line-height: 28px;
-    /* identical to box height, or 100% */
-    text-align: center;
-    color: #fefcf7;
-  }
-  .choose__text {
+    box-sizing: border-box;
+    padding: 20px;
+    flex-direction: row;
+    gap: 50px;
+    justify-content: space-around;
     width: 90%;
+    height: 180px;
+    text-align: start;
+  }
+  .choose__box {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+  .choose__subtext {
+    text-align: start;
   }
 }
 .works {
@@ -390,32 +372,27 @@ a {
   margin-top: 50px;
 }
 
-@media only screen and (max-width: 450px) {
-  .works {
-    margin-top: 800px;
-  }
-  .works__sircle {
-    display: none;
-  }
-  .works__maintitle {
-    text-align: center;
-  }
+@media only screen and (max-width: 768px) {
   .works__cards {
-    flex-direction: column;
-    gap: 50px;
+    gap: 20px;
+    align-items: start;
   }
-  .works__card {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+  .works__hr {
+    width: 200px;
   }
-  .works__text, .works__title, .works__subtitle {
-    text-align: center;
+  .works__text {
+    width: 223px;
   }
-  .works__btn {
-    margin-top: 50px;
-    margin-left: 80px;
+  .works__subtitle {
+    /* Pick your coffee */
+    width: 200px;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 28px;
+  }
+  .works__box {
+    width: 30px;
+    height: 30px;
   }
 }
 .footer {
@@ -467,20 +444,235 @@ path:hover {
   fill: #fdd6ba;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 768px) {
   .footer {
     flex-direction: column;
     gap: 50px;
   }
-  .footer__logo {
-    width: 220px;
+}
+.aboutIntro {
+  margin-top: 50px;
+  background-image: url("../img/bitmabAbout.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 120px;
+  height: 500px;
+  border-radius: 20px;
+}
+.aboutIntro__title {
+  /* About Us */
+  font-family: "Fraunces 9pt";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 48px;
+  /* identical to box height, or 120% */
+  color: #fefcf7;
+}
+.aboutIntro__text {
+  width: 445px;
+  /* Coffeeroasters began */
+  margin-top: 30px;
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  /* or 162% */
+  color: #fefcf7;
+}
+
+@media only screen and (max-width: 768px) {
+  .aboutIntro {
+    background-position: center;
+    height: 400px;
+    padding: 50px;
   }
-  .footer__list {
+  .aboutIntro__text {
+    width: 100%;
+  }
+}
+.our {
+  margin-top: 144px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.our__title {
+  /* Our commitment */
+  font-family: "Fraunces 9pt";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 48px;
+  /* identical to box height, or 120% */
+  color: #333d4b;
+}
+.our__text {
+  /* We’re built on a sim */
+  margin-top: 30px;
+  width: 500px;
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  /* or 162% */
+  color: #333d4b;
+  mix-blend-mode: normal;
+  opacity: 0.8;
+}
+
+@media only screen and (max-width: 768px) {
+  .our {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .our__img {
+    width: 100%;
+  }
+  .our__left {
+    width: 100%;
+  }
+  .our__text {
+    width: 100%;
+  }
+  .our__title {
+    /* Our commitment */
+    font-weight: 900;
+    font-size: 32px;
+  }
+}
+.quelity {
+  position: relative;
+  margin-top: 256px;
+  background-color: #2c343e;
+  border-radius: 20px;
+  padding: 50px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 500px;
+}
+.quelity__title {
+  /* Uncompromising quali */
+  font-family: "Fraunces 9pt";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 48px;
+  /* identical to box height, or 120% */
+  color: #fefcf7;
+}
+.quelity__text {
+  width: 540px;
+  /* Although we work wit */
+  margin-top: 30px;
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  /* or 162% */
+  color: #fefcf7;
+  mix-blend-mode: normal;
+  opacity: 0.8;
+}
+.quelity__img {
+  position: absolute;
+  top: -90px;
+  right: 100px;
+}
+
+@media only screen and (max-width: 768px) {
+  .quelity {
+    margin-top: 300px;
+    min-height: 400px;
+    align-items: center;
     flex-direction: column;
-    width: 200px;
-    gap: 20px;
   }
-  .footer__link {
-    text-align: center !important;
+  .quelity__img {
+    width: 80%;
+    top: -200px;
+    height: 320px;
+    left: 10%;
+    border-radius: 20px;
+  }
+  .quelity__right {
+    width: 50%;
+  }
+  .quelity__text {
+    width: 100%;
+  }
+  .quelity__title {
+    width: 80%;
+    font-size: 32px;
+  }
+  .quelity__left {
+    margin-top: 80px;
+  }
+}
+.country {
+  margin-top: 200px;
+}
+.country__subtitle {
+  /* Our headquarters */
+  font-family: "Fraunces 9pt";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  margin-left: 12%;
+  /* identical to box height, or 133% */
+  color: #83888f;
+}
+.country__cards {
+  margin-top: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.country__card {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 50px;
+}
+.country__title {
+  /* United Kingdom */
+  font-family: "Fraunces 9pt";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 36px;
+  /* identical to box height, or 112% */
+  color: #333d4b;
+}
+.country__text {
+  /* 68 Asfordby Rd Alcas */
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  /* or 162% */
+  color: #333d4b;
+}
+
+@media only screen and (max-width: 768px) {
+  .country__cards {
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+  }
+  .country__subtitle {
+    margin-left: 25%;
+  }
+  .country__card {
+    align-items: center;
+  }
+  .country__title {
+    font-size: 32px;
   }
 }/*# sourceMappingURL=style.css.map */
