--- a/homeBlock/_navbar.scss
+++ b/homeBlock/_navbar.scss
@@ -44,7 +44,7 @@
   }
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 768px) {
   .navbar {
     &__list {
       display: none;
@@ -57,3 +57,12 @@
     }
   }
 }
+
+
+
+
+// @media only screen and (max-width:768px){
+//   .navbar{
+
+//   }
+// }
