--- a/homeBlock/_works.scss
+++ b/homeBlock/_works.scss
@@ -84,37 +84,6 @@
   }
 }
 
-// @media only screen and (max-width: 450px) {
-//   .works {
-//     margin-top: 800px;
-//     &__sircle {
-//       display: none;
-//     }
-//     &__maintitle {
-//       text-align: center;
-//     }
-//     &__cards {
-//       flex-direction: column;
-//       gap: 50px;
-//     }
-//     &__card {
-//       display: flex;
-//       align-items: center;
-//       justify-content: center;
-//       flex-direction: column;
-//     }
-//     &__text,
-//     &__title,
-//     &__subtitle {
-//       text-align: center;
-//     }
-
-//     &__btn {
-//       margin-top: 50px;
-//       margin-left: 80px;
-//     }
-//   }
-// }
 
 @media only screen and (max-width: 768px) {
   .works {
@@ -138,6 +107,39 @@
     &__box {
       width: 30px;
       height: 30px;
+    }
+  }
+}
+
+
+@media only screen and (max-width: 450px) {
+  .works {
+    margin-top: 800px;
+    &__sircle {
+      display: none;
+    }
+    &__maintitle {
+      text-align: center;
+    }
+    &__cards {
+      flex-direction: column;
+      gap: 50px;
+    }
+    &__card {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+    }
+    &__text,
+    &__title,
+    &__subtitle {
+      text-align: center;
+    }
+
+    &__btn {
+      margin-top: 50px;
+      margin-left: 80px;
     }
   }
 }
