--- a/complatedBlock/_complatedIntro.scss
+++ b/complatedBlock/_complatedIntro.scss
@@ -45,3 +45,15 @@
 .complated__title{
     color: whitesmoke;
 }
+
+@media only screen and (max-width:768px){
+  .complatedIntro{
+
+    &__title{
+      font-size: 50px;
+    }
+    &__text{
+      width: 100%;
+    }
+  }
+}
