--- a/complatedBlock/_drink.scss
+++ b/complatedBlock/_drink.scss
@@ -114,3 +114,25 @@
     }
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .drink {
+    &__left {
+      display: none;
+    }
+
+    &__bottom {
+      flex-direction: column;
+      gap: 50px;
+    }
+    &__cards {
+      width: 100%;
+    }
+
+    &__top{
+      &-title{
+        font-size: 25px;
+      }
+    }
+  }
+}
