--- a/complatedBlock/_summary.scss
+++ b/complatedBlock/_summary.scss
@@ -52,3 +52,14 @@
   flex-direction: column;
   align-items: flex-end;
 }
+@media only screen and (max-width: 768px) {
+  .summary {
+    width: 100%;
+    margin-right: 0;
+
+    &__btn {
+    
+      margin-right: 150px;
+    }
+  }
+}
